Treat MBOX resources as inboxes, as they are basically acting like that. This fixes filtering for mails that arrive to mbox.

BUG: 297768
FIXED-IN: 4.10